--- a/src/app/pvc/pvc.component.html
+++ b/src/app/pvc/pvc.component.html
@@ -144,38 +144,62 @@
         </div>     
     </form>
 </div>
-<div class="container d-flex justify-content-center listaPozicija noPrint">
-    <table class="table table-sm w-75 table-responsive">
-        <thead>
-            <tr class="table-light">
-                <th scope="col">r.b.</th>
-                <th scope="col">Tip</th>
-                <th scope="col">P O Z I C I J A</th>
-                <th scope="col">Kolicina</th>
-                <th scope="col">Falcna Mera</th>
-                <th scope="col">Opis</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let pos of pozicije; index as i; trackBy: trackByFn">
-                <td>{{i + 1}}</td>
-                <td *ngIf="pos.nacinOtvaranja == 'kombinovano'">O/N</td>
-                <td *ngIf="pos.nacinOtvaranja == 'okretno'">O</td>
-                <td *ngIf="pos.nacinOtvaranja == 'nagibno'">N</td>
-                <td>{{pos.unesenaSirina}} x {{pos.unesenaVisina}} -  
-                    <span *ngIf="pos.brojKrila == '1'">1Kr. </span>
-                    <span *ngIf="pos.brojKrila == '2'">2Kr. </span>
-                    <span *ngIf="pos.otvaranje == 'levo'"><b>L</b> </span>
-                    <span *ngIf="pos.otvaranje == 'desno'"><b>D</b></span>                                                   
-                </td>
-                <td>{{pos.kolicina}}</td>  
-                <td><i>({{pos.sirina}} x {{pos.visina}})</i></td>
-                <td>{{pos.opis}}</td>
-                <th><button class="maliDel" (click)="deleteRow(i)">X</button></th>            
-            </tr>
-        </tbody>
-    </table>
+<div class="noPrint container mx-auto m-0 row dugmadZaMaliEkran">
+    <div class="col-lg-6">
+        <div class="d-grid col-lg-6 mx-auto potvrdiDugme">
+            <div class="btn-group" role="group">
+                <button class="btn btn-outline-primary" type="button" (click)="izracunajStampaj()" [disabled]="pozicije.length === 0">Nalog za odvajanje</button>
+                <button class="btn btn-outline-primary" type="button" [disabled]="pozicije.length === 0" onclick="this.blur()" (click)="openFullscreen(content)" >Izmeni</button>
+
+            </div>
+            
+        </div> 
+    </div>
+    <div class="col-lg-6 modalDugme">
+        <div class="d-grid col-lg-6 mx-auto potvrdiDugme">
+            <button class="btn btn-outline-secondary" type="button" [disabled]="pozicije.length === 0" onclick="this.blur()" >Lista pozicija</button>
+        </div> 
+    </div>
+    <div class="col-lg-6">
+        <div class="d-grid col-lg-6 mx-auto potvrdiDugme">
+            <button class="btn btn-outline-dark" type="button" (click)="izracunajCenu()" [disabled]="pozicije.length === 0" onclick="this.blur()">{{cena}}</button>
+        </div> 
+    </div>
+</div>
+<div class="container listaPozicija noPrint">
+    <div class="d-flex justify-content-center">
+        <table class="table table-sm w-75 table-responsive">
+            <thead>
+                <tr class="table-light">
+                    <th scope="col">r.b.</th>
+                    <th scope="col">Tip</th>
+                    <th scope="col">P O Z I C I J A</th>
+                    <th scope="col">Kolicina</th>
+                    <th scope="col">Falcna Mera</th>
+                    <th scope="col">Opis</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let pos of pozicije; index as i; trackBy: trackByFn">
+                    <td>{{i + 1}}</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'kombinovano'">O/N</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'okretno'">O</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'nagibno'">N</td>
+                    <td>{{pos.unesenaSirina}} x {{pos.unesenaVisina}} -  
+                        <span *ngIf="pos.brojKrila == '1'">1Kr. </span>
+                        <span *ngIf="pos.brojKrila == '2'">2Kr. </span>
+                        <span *ngIf="pos.otvaranje == 'levo'"><b>L</b> </span>
+                        <span *ngIf="pos.otvaranje == 'desno'"><b>D</b></span>                                                   
+                    </td>
+                    <td>{{pos.kolicina}}</td>  
+                    <td><i>({{pos.sirina}} x {{pos.visina}})</i></td>
+                    <td>{{pos.opis}}</td>
+                    <th><button class="maliDel" (click)="deleteRow(i)">X</button></th>            
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <div class="footer">
     <span>M&J<sup>&#174;</sup></span>
