--- a/src/app/al/al.component.html
+++ b/src/app/al/al.component.html
@@ -177,38 +177,40 @@
         </div> 
     </div>
 </div>
-<div class="container d-flex justify-content-center listaPozicija noPrint">
-    <table class="table table-sm w-75 table-responsive">
-        <thead>
-            <tr class="table-light">
-                <th scope="col">r.b.</th>
-                <th scope="col">Tip</th>
-                <th scope="col">P O Z I C I J A</th>
-                <th scope="col">Kolicina</th>
-                <th scope="col">Falcna Mera</th>
-                <th scope="col">Opis</th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let pos of pozicijeAL; index as i; trackBy: trackByFn">
-                <td>{{i + 1}}</td>
-                <td *ngIf="pos.nacinOtvaranja == 'kombinovano'">O/N</td>
-                <td *ngIf="pos.nacinOtvaranja == 'okretno'">O</td>
-                <td *ngIf="pos.nacinOtvaranja == 'nagibno'">N</td>
-                <td>{{pos.unesenaSirina}} x {{pos.unesenaVisina}} -  
-                    <span *ngIf="pos.brojKrila == '1'">1Kr. </span>
-                    <span *ngIf="pos.brojKrila == '2'">2Kr. </span>
-                    <span *ngIf="pos.otvaranje == 'levo'"><b>L</b> </span>
-                    <span *ngIf="pos.otvaranje == 'desno'"><b>D</b></span>                                              
-                </td>
-                <td>{{pos.kolicina}}</td>  
-                <td><i>({{pos.sirina}} x {{pos.visina}})</i></td>
-                <td>{{pos.opis}}</td>
-                <th><button class="maliDel" (click)="deleteRow(i)">X</button></th>            
-            </tr>
-        </tbody>
-    </table>
+<div class="container listaPozicija noPrint">
+    <div class="d-flex justify-content-center">   
+        <table class="table table-sm w-75 table-responsive">
+            <thead>
+                <tr class="table-light">
+                    <th scope="col">r.b.</th>
+                    <th scope="col">Tip</th>
+                    <th scope="col">P O Z I C I J A</th>
+                    <th scope="col">Kolicina</th>
+                    <th scope="col">Falcna Mera</th>
+                    <th scope="col">Opis</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let pos of pozicijeAL; index as i; trackBy: trackByFn">
+                    <td>{{i + 1}}</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'kombinovano'">O/N</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'okretno'">O</td>
+                    <td *ngIf="pos.nacinOtvaranja == 'nagibno'">N</td>
+                    <td>{{pos.unesenaSirina}} x {{pos.unesenaVisina}} -  
+                        <span *ngIf="pos.brojKrila == '1'">1Kr. </span>
+                        <span *ngIf="pos.brojKrila == '2'">2Kr. </span>
+                        <span *ngIf="pos.otvaranje == 'levo'"><b>L</b> </span>
+                        <span *ngIf="pos.otvaranje == 'desno'"><b>D</b></span>                                              
+                    </td>
+                    <td>{{pos.kolicina}}</td>  
+                    <td><i>({{pos.sirina}} x {{pos.visina}})</i></td>
+                    <td>{{pos.opis}}</td>
+                    <th><button class="maliDel" (click)="deleteRow(i)">X</button></th>            
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <div class="footer">
     <span>M&J<sup>&#174;</sup></span>
