--- a/src/app/pvc/pvc.component.html
+++ b/src/app/pvc/pvc.component.html
@@ -157,7 +157,7 @@
     </div>
     <div class="col-lg-6 modalDugme">
         <div class="d-grid col-lg-6 mx-auto potvrdiDugme">
-            <button class="btn btn-outline-secondary" type="button" [disabled]="pozicije.length === 0" onclick="this.blur()" >Lista pozicija</button>
+            <button class="btn btn-outline-secondary" type="button" [disabled]="pozicije.length === 0" onclick="this.blur()" (click)="openScrollableContent(longContent)">Lista pozicija</button>
         </div> 
     </div>
     <div class="col-lg-6">
@@ -210,38 +210,43 @@
     </div>
     <div class="modal-body">
         <div class="container listaPozicijaModal noPrint">
-            <table class="table table-sm table-responsive">
+            <table class="table table-responsive">
                 <thead>
                     <tr class="table-light">
                         <th scope="col">r.b.</th>
-                        <th scope="col">Falcna sirina</th>
-                        <th scope="col">Falcna visina</th>
-                        <th scope="col">Broj krila</th>
-                        <th scope="col">Otvaranje</th>
-                        <th scope="col">Nacin Otvaranja</th>
+                        <th scope="col">Tip</th>
+                        <th scope="col">Pozicija</th>
+                        <th scope="col">Kol.</th>
+                        <th scope="col">Falc.Mera</th>
                         <th scope="col">Opis</th>
-                        <th scope="col">Kom.</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let pos of pozicije; index as i; trackBy: trackByFn">
                         <td>{{i + 1}}</td>
-                        <td>{{pos.sirina}}</td>
-                        <td>{{pos.visina}}</td>
-                        <td>{{pos.brojKrila}}</td>
-                        <td>{{pos.otvaranje}}</td>
-                        <td>{{pos.nacinOtvaranja}}</td>
-                        <td>{{pos.opis}}</td>
-                        <td>{{pos.kolicina}}</td>                
+                        <td *ngIf="pos.nacinOtvaranja == 'kombinovano'">O/N</td>
+                        <td *ngIf="pos.nacinOtvaranja == 'okretno'">O</td>
+                        <td *ngIf="pos.nacinOtvaranja == 'nagibno'">N</td>
+                        <td>{{pos.unesenaSirina}}x{{pos.unesenaVisina}}  
+                            <span *ngIf="pos.brojKrila == '1'">1Kr.</span>
+                            <span *ngIf="pos.brojKrila == '2'">2Kr.</span>
+                            <span *ngIf="pos.otvaranje == 'levo'"><b>L</b> </span>
+                            <span *ngIf="pos.otvaranje == 'desno'"><b>D</b></span>                                                   
+                        </td>
+                        <td>{{pos.kolicina}}</td>  
+                        <td><i>({{pos.sirina}}x{{pos.visina}})</i></td>
+                        <td *ngIf="pos.opis == 'Jednokrilni deo trokrilnog'">1/3</td>
+                        <td *ngIf="pos.opis == 'Dvokrilni deo trokrilnog'">2/3</td>
+                        <td *ngIf="pos.opis == undefined"></td>
                         <th><button class="maliDel" (click)="deleteRow(i)">X</button></th>            
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+  <div class="modal-footer pb-5 pt-0">
+    <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Zatvori</button>
   </div>
 </ng-template> 
 <ng-template #content let-modal>
